fix(openapi) : openapi generator contract improvements, N/A
