# src/main/java/br/com/sample/solutionbto/entrypoint/controller/mapper/EnderecoCompletoDtoMapper.java
@@ -1,7 +1,7 @@
 package br.com.sample.solutionbto.entrypoint.controller.mapper;
 
 import br.com.sample.solutionbto.core.domain.EnderecoCompletoDomain;
-import br.com.sample.solutionbto.openapi.model.EnderecoCompleto;
+import br.com.sample.solutionbto.openapi.model.EnderecoCompletoDto;
 import org.mapstruct.Mapper;
 
 import java.util.List;
@@ -9,7 +9,7 @@ import java.util.List;
 @Mapper(componentModel = "spring")
 public interface EnderecoCompletoDtoMapper {
 
-    EnderecoCompleto map(EnderecoCompletoDomain enderecos);
+    EnderecoCompletoDto map(EnderecoCompletoDomain enderecos);
 
-    List<EnderecoCompleto> map(List<EnderecoCompletoDomain> listaEnderecos);
+    List<EnderecoCompletoDto> map(List<EnderecoCompletoDomain> listaEnderecos);
 }
